Fix focus outline overlapping with text in preview toggle
Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559254&signed_aid=rvkADyGUDoXICQ7FGyyqaA==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=559255&signed_aid=3U5tBrDAx3fETmI2O_BeLA==&inline=1

Bug: 1337702

--- a/front_end/ui/components/panel_feedback/previewToggle.css
+++ b/front_end/ui/components/panel_feedback/previewToggle.css
@@ -16,6 +16,9 @@
 .helper {
   text-align: center;
   font-style: italic;
+  /* For x-link outline not to paint over the helper text
+  we need to have 2 * <padding>px additional line height */
+  line-height: calc(1em + 8px);
 }
 
 .feedback {
